Changed internal plugin interface back to static
It seemed like a good idea to use pointers for flexibility at first, but
it turns out to be largely unnecessary, since there won't ever be the need
to implement multiple plugin interfaces per plugin project.

--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -215,6 +215,7 @@
     <ClInclude Include="msg.h" />
     <ClInclude Include="parallel.hpp" />
     <ClInclude Include="parallel_c.hpp" />
+    <ClInclude Include="plugin.h" />
     <ClInclude Include="rdram.h" />
     <ClInclude Include="rdp.h" />
     <ClInclude Include="trace.h" />
