--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClInclude Include="irand.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="plugin.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="version.h.in">
