While I'm on it, let's also make the internal screen interface static again
The retracer needs to be rewritten specifically for benchmarking, anyway.

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -88,6 +88,9 @@
     <ClInclude Include="plugin.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="screen.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="version.h.in">
