--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -218,6 +218,7 @@
     <ClInclude Include="plugin.h" />
     <ClInclude Include="rdram.h" />
     <ClInclude Include="rdp.h" />
+    <ClInclude Include="screen.h" />
     <ClInclude Include="trace.h" />
     <ClInclude Include="trace_read.h" />
     <ClInclude Include="trace_write.h" />
