--- a/plugin-zilmar/plugin-zilmar.vcxproj
+++ b/plugin-zilmar/plugin-zilmar.vcxproj
@@ -26,8 +26,8 @@
   <ItemGroup>
     <ClCompile Include="gfx_1.3.c" />
     <ClCompile Include="msg.c" />
-    <ClCompile Include="plugin_zilmar.c" />
-    <ClCompile Include="screen_opengl_zilmar.c" />
+    <ClCompile Include="plugin.c" />
+    <ClCompile Include="screen.c" />
     <ClCompile Include="wgl_ext.c" />
   </ItemGroup>
   <ItemGroup>
