--- a/retrace/retrace.vcxproj.filters
+++ b/retrace/retrace.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClCompile Include="retrace.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="screen_sdl.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="plugin_retrace.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="msg.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="screen.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="plugin.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,10 +32,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="retrace.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="plugin_retrace.h">
+    <ClInclude Include="plugin.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
