Small fix in CORE_SIMPLE_NAME

--- a/core/version.h.in
+++ b/core/version.h.in
@@ -13,4 +13,4 @@
 #define CORE_NAME CORE_BASE_NAME " " GIT_TAG
 #endif
 
-#define CORE_SIMPLE_NAME "angrylionplus"
+#define CORE_SIMPLE_NAME "angrylion-plus"
