--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -202,6 +202,12 @@
     <ClCompile Include="parallel.cpp" />
     <ClCompile Include="parallel_c.cpp" />
     <ClCompile Include="rdp.c" />
+    <ClCompile Include="rdp\cmd.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="rdram.c" />
     <ClCompile Include="trace_read.c" />
     <ClCompile Include="trace_write.c" />
