Moved color blender unit code to blender.c

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="rdp\cmd.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\blender.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
