--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="rdp\blender.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\combiner.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
