Moved rasterizer code to rasterizer.c

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="rdp\coverage.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\rasterizer.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
