Moved z-buffer code to zbuffer.c

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="rdp\rasterizer.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\zbuffer.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
