Moved frame buffer code to fbuffer.c

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="rdp\zbuffer.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\fbuffer.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
