Moved dithering code to dither.c

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="rdp\fbuffer.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\dither.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
