Moved texture memory unit code to tmem.c

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="rdp\dither.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\tmem.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
