--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="rdp\tmem.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\tcoord.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
