Moved remaining texture code to tex.c
Also moved some other code snippets

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="rdp\tcoord.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="rdp\tex.c">
+      <Filter>Source Files\rdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
