--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="rdp\tex.c">
       <Filter>Source Files\rdp</Filter>
     </ClCompile>
+    <ClCompile Include="screen.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
