Splitting up vi.c into its components

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -12,6 +12,9 @@
       <UniqueIdentifier>{142a5325-573c-4fde-9d8f-af10cb6e28e5}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
+    <Filter Include="Source Files\vi">
+      <UniqueIdentifier>{999c0f46-6fb4-4561-ae01-8aaa8e829530}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rdp.c">
@@ -79,6 +82,24 @@
     </ClCompile>
     <ClCompile Include="screen.c">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="vi\gamma.c">
+      <Filter>Source Files\vi</Filter>
+    </ClCompile>
+    <ClCompile Include="vi\divot.c">
+      <Filter>Source Files\vi</Filter>
+    </ClCompile>
+    <ClCompile Include="vi\fetch.c">
+      <Filter>Source Files\vi</Filter>
+    </ClCompile>
+    <ClCompile Include="vi\restore.c">
+      <Filter>Source Files\vi</Filter>
+    </ClCompile>
+    <ClCompile Include="vi\video.c">
+      <Filter>Source Files\vi</Filter>
+    </ClCompile>
+    <ClCompile Include="vi\lerp.c">
+      <Filter>Source Files\vi</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
