--- a/plugin-zilmar/plugin-zilmar.vcxproj.filters
+++ b/plugin-zilmar/plugin-zilmar.vcxproj.filters
@@ -18,6 +18,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="config.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gfx_1.3.c">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="plugin.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="config.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
