--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -20,9 +20,6 @@
     <ClCompile Include="rdp.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="vi.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="rdram.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -101,6 +98,9 @@
     <ClCompile Include="vi\lerp.c">
       <Filter>Source Files\vi</Filter>
     </ClCompile>
+    <ClCompile Include="vi\vi.c">
+      <Filter>Source Files\vi</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -116,9 +116,6 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="rdram.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="vi.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="msg.h">
