--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if((${CMAKE_VERSION} VERSION_EQUAL 3.9) OR (${CMAKE_VERSION} VERSION_GREATER 3.9
     cmake_policy(SET CMP0069 NEW)
 
     include(CheckIPOSupported)
-    check_ipo_supported(RESULT IPO_SUPPORTED)
+    check_ipo_supported(RESULT ENABLE_IPO)
     if(ENABLE_IPO)
         message("Interprocedural optimizations enabled")
     endif(ENABLE_IPO)
